# c-courses

./: CMakeLists.txt
include/: courses.h  utils.h
src/: main.cpp  utils.cpp
src/courses/: algoritm.cpp  dateTime.cpp  enumeration.cpp  errorHandeling.cpp  errors.cpp  fileTypes.cpp  inlineC.cpp  insertationSort.cpp  macro.cpp  math.cpp  mergeSort.cpp  searchAlgoritms.cpp  stringFunctions.cpp  templates.cpp  union.cpp  vectors.cpp
src/courses/assets/algoritm/: algoritm.txt
src/courses/assets/dateTime/: dateTime.txt
src/courses/assets/enumeration/: enumeration.txt
src/courses/assets/errorHandeling/: errorHandeling.txt
src/courses/assets/errors/: errors.txt
src/courses/assets/fileTypes/: fileTypes.txt  readedFile.txt
src/courses/assets/inline/: inline.txt
src/courses/assets/insertionSort/: insertionSort.txt
src/courses/assets/macro/: macro.txt
src/courses/assets/math/: math.txt
src/courses/assets/mergeSort/: mergeSort.txt
src/courses/assets/searchAlgoritms/: searchAlgoritms.txt
src/courses/assets/stringFunctions/: stringFunctions.txt
src/courses/assets/templates/: templates.txt
src/courses/assets/union/: union.txt
src/courses/assets/vectors/: vectors.txt
